Fix End tag mistake
git-svn-id: https://svn.php.net/repository/phpdoc/kr/trunk@129294 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/make_chm_index_kr.html
+++ b/make_chm_index_kr.html
@@ -29,7 +29,7 @@ COLSPAN="3" ALIGN="center">&nbsp;</TD></TR></TABLE></TD></TR><TR BGCOLOR="#33336
 <H3 CLASS="editor">Egon Schmid</H3>
 <H3 CLASS="editor">Gwangjong Lee</H3>
 <H3 CLASS="editor">Tae-young Jin</H3>
-<H3 CLASS="editor">Yun-young Lee/H3>
+<H3 CLASS="editor">Yun-young Lee</H3>
 <H3 CLASS="editor">Hyeonho Heo</H3>
 </TD></TR></TABLE>
 <BR><P ALIGN="CENTER">이 파일은 [GENTIME]에 생성되었습니다.<BR>
