--- a/make_chm_index_kr.html
+++ b/make_chm_index_kr.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
   <TITLE>PHP 매뉴얼</TITLE>
-  <META NAME="HTTP_EQUIV" CONTENT="text/html; charset=UTF-8">
+  <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
   <LINK REL="STYLESHEET" HREF="style.css">
 </HEAD>
 <BODY BGCOLOR="#FFFFFF" TEXT="#000000" LINK="#0000FF" VLINK="#840084" ALINK="#0000FF" TOPMARGIN="0" LEFTMARGIN="0">
@@ -30,7 +30,8 @@ COLSPAN="3" ALIGN="center">&nbsp;</TD></TR></TABLE></TD></TR><TR BGCOLOR="#33336
 <H3 CLASS="editor">Gwangjong Lee</H3>
 <H3 CLASS="editor">Tae-young Jin</H3>
 <H3 CLASS="editor">Yun-young Lee</H3>
-<H3 CLASS="editor">Hyeonho Heo</H3>
+<H3 CLASS="editor">Ryeonho Heo</H3>
+<H3 CLASS="editor">Sunghyuk Do</H3>
 </TD></TR></TABLE>
 <BR><P ALIGN="CENTER">이 파일은 [GENTIME]에 생성되었습니다.<BR>
 최신 버전은 <A HREF="http://www.php.net/docs.php">http://www.php.net/docs.php</A>에서
