some string functions
git-svn-id: https://svn.php.net/repository/phpdoc/kr/trunk@144768 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/make_chm_index_kr.html
+++ b/make_chm_index_kr.html
@@ -15,7 +15,7 @@ COLSPAN="3" ALIGN="center">&nbsp;</TD></TR></TABLE></TD></TR><TR BGCOLOR="#33336
 
 <P><TABLE ALIGN="CENTER">
 <TR><TD ALIGN="CENTER">
-<H1 CLASS="title">PHP Manual</H1>
+<H1 CLASS="title">PHP 매뉴얼</H1>
 <DIV CLASS="author">Stig S&aelig;ther Bakken</DIV>
 <DIV CLASS="author">Alexander Aulbach</DIV>
 <DIV CLASS="author">Egon Schmid</DIV>
