--- a/make_chm_index_kr.html
+++ b/make_chm_index_kr.html
@@ -29,7 +29,7 @@ COLSPAN="3" ALIGN="center">&nbsp;</TD></TR></TABLE></TD></TR><TR BGCOLOR="#33336
 <H3 CLASS="editor">Egon Schmid</H3>
 <H3 CLASS="editor">Translated by PHP Manual Korean Translators</H4>
 </TD></TR></TABLE>
-<BR><P ALIGN="CENTER">이 파일은 [GENTIME]에 생성되었습니다.<BR>
+<BR><P ALIGN="CENTER">이 파일은 [GENTIME]에 생성하였습니다.<BR>
 최신 버전은 <A HREF="http://www.php.net/docs.php">http://www.php.net/docs.php</A>에서
 얻을 수 있습니다.</P>
 
