--- a/make_chm_index.html
+++ b/make_chm_index.html
@@ -1,5 +1,5 @@
 <HTML>
-<!-- EN-Revision: 1.4 Maintainer: progcom Status: ready -->
+<!-- EN-Revision: 1.5 Maintainer: progcom Status: ready -->
 <HEAD>
   <TITLE>PHP Manual</TITLE>
   <META NAME="HTTP_EQUIV" CONTENT="text/html; charset=utf-8">
@@ -26,7 +26,7 @@ COLSPAN="3" ALIGN="center">&nbsp;</TD></TR></TABLE></TD></TR><TR BGCOLOR="#33336
 <div class="author">Damien Seguy</div>
 <div class="author">Jakub Vrana</div>
 <H4 CLASS="EDITEDBY">Edited by</H4>
-<H3 CLASS="editor">Gabor Hojtsy</H3>
+<H3 CLASS="editor">Philip Olson</H3>
 </TD></TR></TABLE>
 <BR><P ALIGN="CENTER">파일 생성일: [GENTIME]<BR>
 최신 버전을 얻으려면 <A HREF="http://www.php.net/docs.php">http://www.php.net/docs.php</A>를 방문하십시오.</P>
