--- a/make_chm_index.html
+++ b/make_chm_index.html
@@ -31,7 +31,7 @@ COLSPAN="3" ALIGN="center">&nbsp;</TD></TR></TABLE></TD></TR><TR BGCOLOR="#33336
 <BR><P ALIGN="CENTER">파일 생성일: [GENTIME]<BR>
 최신 버전을 얻으려면 <A HREF="http://www.php.net/docs.php">http://www.php.net/docs.php</A>를 방문하십시오.</P>
 
-<BR><P CLASS="copyright" ALIGN="CENTER"><A HREF="copyright.html">Copyright</A> &copy; 1997 - 2008 the PHP Documentation Group</P>
+<BR><P CLASS="copyright" ALIGN="CENTER"><A HREF="copyright.html">Copyright</A> © 1997 - 2008 the PHP Documentation Group</P>
 
 </TD><TD><IMG SRC="spacer.gif" WIDTH="10" HEIGHT="1"></TD></TR>
 <TR><TD COLSPAN="3"><DIV CLASS="NAVFOOTER"><TABLE BGCOLOR="#CCCCFF" BORDER="0"
